Tue Aug 14 13:55:42 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/platform_macosx.GNU: Added a patch from John
	  Michael Zorko  <j.zorko@att.net>.

Tue Aug 14 10:21:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.h: Clarified the defaults for the per-process and
          per-instance default priority masks.

Mon Aug 13 14:01:35 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* include/makeinclude/wrapper_macros.GNU: Fixed some hard-coded
	  uses of .shobj and .obj.  Thanks to Shashi Bhushan
 	  <Shashi.Bhushan@lmco.com> for contributing these.

	* ace/CDR_Stream.h: Added comments warning about the deletarious
	  effects of not aligning buffers to ACE_InputCDR and
 	  ACE_OutputCDR properly.  Thanks to Alain Decamps
 	  <Alain.Decamps@PIDPA.be> for reporting this.

Sun Aug 12 14:46:07 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.cpp (sched_params): Make sure to set errno for Win32 so
	  that callers can figure out what's going wrong in a consistent
 	  way.

Mon Aug 13 20:09:04 2001  Balachandran  <bala@cs.wustl.edu>

        * ACE version 5.1.19 released.

Sun Aug 12 02:17:01 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Acceptor.cpp:
        * ace/MEM_Connector.cpp: On non-Win32 platforms, disable
	  multithreaded MEM_IO if _ACE_USE_SV_SEM is defined.

Sun Aug 12 01:27:51 2001  Steve Huston  <shuston@riverace.com>

        * tests/Log_Msg_Test.cpp: Correct const-ness of a pointer
          retrieved from ACE_Log_Record::msg_data().

Sun Aug 12 00:34:42 2001  Steve Huston  <shuston@riverace.com>

        * ace/Log_Record.h:
        * ace/Log_Record.i (msg_data()): Changed ACE_TCHAR *msg_data()
          to:  const ACE_TCHAR *msg_data (void) const. Makes it safer,
          and conforms to all current usage inside ACE. Also makes
          C++ Network Programming examples simpler :-)

Sat Aug 11 09:01:11 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Thread.h: