@@ -1,3 +1,8 @@
+Tue Aug 14 14:19:37 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
+
+	* ace/Log_Msg.cpp: Applied the patches sent by Tibor Kiss
+	  <tkiss@mindmaker.hu>.
+
 Tue Aug 14 13:55:42 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* include/makeinclude/platform_macosx.GNU: Added a patch from John
